flake8: ignore lambda assignments

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,5 +9,5 @@ cover-html=1
 cover-html-dir=.cover
 
 [flake8]
-ignore=E101,W191,E126,E127,E128
+ignore=E101,W191,E126,E127,E128,E731
 exclude=.git,.tox,.env,build,dist,tests.py
